<resources>
    <string name="app_name">Pubcrawl</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confrim password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_simple_login">Simple sing in</string>
    <string name="action_simple_sign_up">Simple sign up</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_races">Races</string>
    <string name="title_activity_my_races">My races</string>
    <string name="title_activity_pubs">Pubs</string>
    <string name="button_open_races">Races</string>
    <string name="button_open_my_races">My races</string>
    <string name="button_open_pubs">Pubs</string>
    <string name="button_join_race">join race</string>
    <string name="button_leave_race">leave race</string>
    <string name="button_start_race">start race</string>
    <string name="button_stop_race">stop race</string>
    <string name="button_collection_add">add to collection</string>
    <string name="button_collection_remove">remove from collection</string>

    <string name="fragment_races_detail_placeholder">select a race</string>
    <string name="fragment_pubs_detail_placeholder">select a pub</string>
    <string name="fragment_my_races_detail_placeholder">select or create a race</string>

    <string name="textview_authentication_placeholder">Fill in the fields</string>
    <string name="textview_authentication_failed">Authentication failed</string>
    <string name="textview_authentication_passed">Authentication passed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
