<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.samtimo.pubcrawl.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <Button
        android:id="@+id/races_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_races"
        android:textAllCaps="false"
        android:onClick="openLinearLayout"/>
    <Button
        android:id="@+id/my_races_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_my_races"
        android:textAllCaps="false"
        android:onClick="openRelativeLayout"/>
    <Button
        android:id="@+id/pubs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_pubs"
        android:textAllCaps="false"
        android:onClick="openListView"/>
</LinearLayout>
